@@ -138,6 +138,7 @@ MH = Marije Huizing
 MS = Michael Stoll
 MSo= Michael Somos
 MW = Mark Watkins
+NM = Nicolas Mascot
 NS = Nils Skoruppa
 OB = Oliver Bandel
 OR = Olivier Ramare
