@@ -1045,10 +1045,7 @@ tests_OK(GEN a, GEN nfa, GEN b, GEN nfb, long fliso)
   {
     P = nf_get_ramified_primes(nfb); l = lg(P);
     for (i = 1; i < l; i++)
-    {
-      long va = Z_pval(da, gel(P,i));
-      if (va && Z_pval(db, gel(P,i)) < q * va) return 0;
-    }
+      if (Z_pval(da, gel(P,i)) == 1 && Z_pval(db, gel(P,i)) < q) return 0;
     return 1;
   }
   /* da = dK A^2, db = dL B^2, dL = dK^q * N(D)
