@@ -406,4 +406,15 @@ Mod(-6/5, x)
   ***   at top-level: nfalgtobasis(nf,['a,'a]~)
   ***                 ^-------------------------
   *** nfalgtobasis: incorrect type in nfalgtobasis (t_COL).
-Total time spent: 624
+[-4*x^2, 4*x^2]
+[-77/171*x^16 + 28/19*x^13 - 1222/171*x^10 - 1205/171*x^7 - 734/57*x^4 + 161
+/171*x, -73/171*x^16 + 232/171*x^13 - 1141/171*x^10 - 1249/171*x^7 - 2210/17
+1*x^4 - 274/171*x, -4/19*x^16 + 104/171*x^13 - 520/171*x^10 - 89/19*x^7 - 12
+01/171*x^4 - 151/171*x, -32/171*x^16 + 28/57*x^13 - 439/171*x^10 - 845/171*x
+^7 - 403/57*x^4 - 586/171*x, 5/171*x^16 - 2/57*x^13 + 49/171*x^10 + 230/171*
+x^7 + 136/57*x^4 + 202/171*x, 3/19*x^16 - 26/57*x^13 + 130/57*x^10 + 205/57*
+x^7 + 89/19*x^4 + 128/57*x, 31/171*x^16 - 98/171*x^13 + 157/57*x^10 + 571/17
+1*x^7 + 793/171*x^4 - 17/57*x, 46/171*x^16 - 154/171*x^13 + 751/171*x^10 + 6
+34/171*x^7 + 1409/171*x^4 - 110/171*x, 109/171*x^16 - 112/57*x^13 + 1661/171
+*x^10 + 2050/171*x^7 + 379/19*x^4 + 425/171*x]
+Total time spent: 686
