@@ -123,3 +123,8 @@ nfisisom(x,x^0)
 nf=nfinit('a^2+1);
 idealhnf(nf,3,('a^2+1)*Mod(1,3))
 nfalgtobasis(nf,['a,'a]~)
+
+\\ # 2213
+nfisincl(x^2-2^5,nfinit(x^4-2))
+\\ # 2214 (duplicate of 2213)
+nfisincl(x^9 - 3*x^6 - 6*x^3 - 1,nfinit(x^18 - 3*x^15 + 15*x^12 + 20*x^9 + 33*x^6 + 6*x^3 + 1))
