@@ -88,6 +88,7 @@ MW  67- mateigen would sometime return eigenvalues instead of eigenvectors
 AE  68- [libpari] FpX_oneroot_split could fail for deg 2 and 3.
 BA  69- [pthread] Fix potential crashes when cancelling threads.
     70- derivnum: add sanity checks for 'ind' [#2216]
+NM  71- nfisincl(x^2-2^5,nfinit(x^4-2)) -> wrong result [#2213, #2214]
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
